[tool.poetry]
name = "openbb-platform-pro-backend"
version = "1.0.0"
description = "Widgets JSON for OpenBB Terminal Pro"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_platform_pro_backend" }]

scripts = { "openbb-api" = "openbb_platform_pro_backend.main:launch_api" }

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb_core = "^1.3.0"
openbb-charting = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
